--- a/paper/practicum_marcelo_grossi.bib
+++ b/paper/practicum_marcelo_grossi.bib
@@ -118,13 +118,11 @@ doi = {10.1111/j.1540-6261.2007.01232.x},
 pages = {1139--1168},
 year = {2007},
 }
-@misc{Ramos1999,
-  added-at = {2011-08-09T16:33:51.000+0200},
-  author = {Ramos, Juan},
-  keywords = {ontology_learning},
-  timestamp = {2013-05-16T22:34:47.000+0200},
-  title = {Using TF-IDF to Determine Word Relevance in Document Queries},
-  year = 1999
+@inproceedings{Ramos2003,
+  title={Using tf-idf to determine word relevance in document queries},
+  author={Ramos, Juan},
+  booktitle={Proceedings of the first instructional conference on machine learning},
+  year={2003}
 }
 @article{barber2008all,
   title={All that glitters: The effect of attention and news on the buying behavior of individual and institutional investors},
@@ -135,4 +133,26 @@ year = {2007},
   pages={785--818},
   year={2008},
   publisher={Soc Financial Studies}
+}
+@article{Toda1995,
+  doi = {10.1016/0304-4076(94)01616-8},
+  year  = {1995},
+  month = {mar},
+  publisher = {Elsevier {BV}},
+  volume = {66},
+  number = {1-2},
+  pages = {225--250},
+  author = {Hiro Y. Toda and Taku Yamamoto},
+  title = {Statistical inference in vector autoregressions with possibly integrated processes},
+  journal = {Journal of Econometrics}
+}
+@misc{Giles2011,
+  author = {Giles, Dave},
+  title = {Testing for Granger Causality},
+  journal = {Econometrics Beat: Dave Giles' Blog},
+  type = {Blog},
+  day = {11},
+  month = {apr},
+  year = {2011},
+  howpublished = {\url{http://davegiles.blogspot.co.uk/2011/04/testing-for-granger-causality.html}
 }
