add visualization for term stock relationship
add visualization for term stock relationship
update paper

--- a/paper/practicum_marcelo_grossi.bib
+++ b/paper/practicum_marcelo_grossi.bib
@@ -156,3 +156,11 @@ year = {2007},
   year = {2011},
   howpublished = {\url{http://davegiles.blogspot.co.uk/2011/04/testing-for-granger-causality.html}
 }
+@article{eichler2012,
+  title={Causal inference in time series analysis},
+  author={Eichler, Michael},
+  journal={Causality: Statistical perspectives and applications},
+  pages={327--354},
+  year={2012},
+  publisher={Wiley Online Library}
+}
